# goodlines

./: Cargo.toml
common/: Cargo.toml
common/src/: channels.rs  config.rs  data.rs  lib.rs  protocol.rs
common/src/protocol/: message.rs
goodlines/: Cargo.toml
goodlines/src/: configure_visuals.rs  connection.rs  global.rs  goodlines.rs  main.rs  settings.rs  ui.rs  util.rs
server/: Cargo.toml
server/src/: global.rs  main.rs  user.rs
server/src/systems/: events.rs  init.rs
