[package]
name = "goodlines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naia-bevy-client = "0.10.1"
bevy = "0.7.0"
bevy_egui = "0.13.0"
common = { path = "../common" }
confy = "0.4.0"
tracing = "0.1.32"
serde = "1.0.136"