[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
naia-bevy-server = { version = "0.10.0", features = ["use-udp"] }
bevy_app = { version = "0.7", default-features = false }
bevy_core = { version = "0.7", default-features = false }
bevy_ecs = { version = "0.7", default-features = false }
bevy_log = { version = "0.7", default-features = false }
